<resources>
    <string name="app_name">QuickNotes</string>


    // code for login items
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="conf_password">Re-Enter</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_name">Name</string>
    <string name="custom_google_client_id">343843543599-5teg78ivrd2kcl8ur78qk9u98mpd7l0m.apps.googleusercontent.com</string>

    <string name="btn_login">LOGIN</string>

    <string name="btn_register">REGISTER</string>
    <string name="btn_skip">SKIP</string>
    <string name="view_class_text">SELECT CLASS</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="no_network_connection">Could not Connect to internet, Please first connect to internet</string>
    <string name="network_connection">Network Detected, You Can Continue</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="class_9th">9th Class</string>
    <string name="class_10th">10th Class</string>

    <string name="app_folder_name">EasyNotes</string>
    <string name="spinner_title">Select Class</string>
    <string name="slogan">Let easy be easy</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!-- Navigation Drawer menu labels -->

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_cnf_password">Password doen not match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
