<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:textColor="@color/bt_purple_dark"
        android:text="Login here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_email_black_24dp" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_lock_black_24dp" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />
    </LinearLayout>
    <!--<Button-->
        <!--android:id="@+id/btnSkip"-->
        <!--android:layout_width="64dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dip"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:text="@string/btn_skip"-->
        <!--android:textColor="@color/white" />-->
</LinearLayout>