<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/colorAccent"
        android:textSize="24dp"
        android:text="@string/view_class_text"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"

        />
    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="7dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/ninth_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:text="@string/class_9th"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24dp" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#7B7A7F"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tenth_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_10th"
                    android:singleLine="true"
                    android:textSize="24dp"
                    android:inputType="textCapWords"
                    android:layout_margin="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"/>

            </RelativeLayout>
                   </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>


